# PN3

./: .env-exampl  PN3_db.db-journal  alembic.ini  example  pyproject.toml  setup.py
_configs/: _constant.py  config.ini  config.py
algorithms/: orders.py
algorithms/a1/: manager.py
algorithms/initialisation/: init.py
api/: cexioApi.py  cexioNewApi.py  customApi.py  hash_message.py  publicApi.py  publicApi_DEL.py
api/cexio/: cexioNewApi.py
api/emulatorcexio/: _old_queriesIm.py  _publicApi_DEL.py  _queriesIm.py  cexioEmNewApi.py
configs/: config.ini  config.py
configs/_feeslimits/: get_parameters.py
db/: comission_exchange.py  comission_trade.py  connection.py  init_create_tables.py  queriesDB.py
deposit/: depoCryptoWithdrawal.py  depoMoneyInOut.py
emulatorApi/: cexioApi.py  cexioEmNewApi.py  customApi.py  data.py  publicApi.py  publicApi_DEL.py  queriesIm.py
function/: calcDeltas.py  exchangeFunction.py  transacFunction.py  utilF.py
function/info/: InfoDepoIN.py  (+1 more)
functions/: deltas.py  exchange.py  price.py  trade.py
manualTraiding/: _traiding.py  run_InfoDepoIN.py  run_InfoDepoOUT.py  traiding.py  user_traiding.py
perfomance/: _perfomParamset.py  _run_m_flags.py  run_1_flag.py  run_calculation.py  run_m_flags.py
prepareData/: loadDataFromCEX.py  prepare_data_from_CEX.py  transaction_example.txt
readme/: description  example_buy_1  example_sell_1  examples  run_alembic
src/: config.py  exchange.py  trade_parameters.py
trade_data/: comission_exchange.py  comission_trade.py  queriesDB.py  updates.py
visualization/: dataPrepare.py
(+92 files in other folders)
