[project]
name = "pn3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "black>=24.0.0",
    "numpy>=2.4.0",
    "openpyxl>=3.1.5",
    "psycopg2>=2.9.11",
    "pydantic-settings>=2.12.0",
    "pydentic>=0.0.1.dev3",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.45",
]
